--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^3.2.4",
+    "socket.io-client": "^4.7.1",
     "stylis-plugin-rtl": "^2.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0",
