--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aws-sdk": "^2.1423.0",
     "axios": "^1.4.0",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^10.13.1",
@@ -40,6 +41,8 @@
     "simplebar-react": "^3.2.4",
     "socket.io-client": "^4.7.1",
     "stylis-plugin-rtl": "^2.1.1",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0",
     "zego-express-engine-webrtc": "^2.25.6",
